@startuml
package AcademicCourse {
  class AcademicCourse {
    initial_year: Integer
  }
}

package Family {
  class Family {
    surnames : String
    normalized_surnames : String
    decline_membership : Boolean
    email: String
    secondary_email: String
    is_defaulter : Boolean
  }
  class Parent {
    name_and_surnames : String
    phone_number: Integer
    additional_phone_number: Integer
    email: String
  }
  class Child {
    name : String
    year_of_birth : Integer
    repetition : Integer
  }
  class Holder {
      number: String
      year: Integer
      sign_date: Date
      document: File
  }
  class BankAccount {
    swift_bic : String
    iban : String
  }
  class State
  class NotSent
  class Sent
  class Signed

  NotSent -up-|> State
  Sent -up-|> State
  Signed -up-|> State
  Holder *-right- State

  class Membership
  Parent --o Holder: ""
  Holder o-- BankAccount
  Family o-- Holder : "membership_holder"
  Family o-- Holder : "custody_holder"
  Family o-- Holder : "after_school_holder"
  Family o-- Holder : "camps_holder"


  Family "1..N" o-- "1..N" Parent
  Family *-- "N" Child
  Family *-- "N" Membership: ""
  Membership o-- AcademicCourse.AcademicCourse
}

@enduml
